<resources>
    <string name="action_settings">Settings</string>
    <string name="action_dialpad">Dialpad</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_archive_chat">Archive chat</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="action_block_participant">Block participant</string>
    <string name="action_unblock_participant">Unblock participant</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_share_with">Share with…</string>
    <string name="title_activity_choose_contact">Choose Contact</string>
    <string name="title_activity_choose_contacts">Choose Contacts</string>
    <string name="title_activity_share_via_account">Share via account</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="title_activity_new_chat">New chat</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <plurals name="x_unread_conversations">
        <item quantity="one">%d unread chat</item>
        <item quantity="other">%d unread chats</item>

    </plurals>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="invalid_muc_nick">Invalid nickname</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your contact list? The chat with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark">Would you like to remove the bookmark for %s?</string>
    <string name="remove_bookmark_and_close">Would you like to remove the bookmark for %s and archive the chat?</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="forward">Forward</string>
    <string name="forward_message">Forward message</string>
    <string name="message_forwarded">Message forwarded</string>
    <string name="cannot_forward_ephemeral_message">Disappearing messages cannot be forwarded</string>
    <string name="forward_encrypted_to_plaintext_warning">This message reached you end-to-end encrypted, but the target conversation is unencrypted. Forwarding will send it as plaintext.</string>
    <string name="suggested_contact_row_description">Start chat with %1$s %2$s</string>
    <string name="invite_contact">Invite contact</string>
    <string name="start_group_chat">Start group chat</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">%1$s has crashed</string>
    <string name="crash_report_message">Using your XMPP account to send in stack traces helps the ongoing development of %1$s.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Could not connect to account</string>
    <string name="problem_connecting_to_accounts">Could not connect to multiple accounts</string>
    <string name="touch_to_fix">Tap to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">Add this missing contact to your contact list?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Getting ready to send image</string>
    <string name="preparing_images">Getting ready to send images</string>
    <string name="sharing_files_please_wait">Sharing files. Please wait…</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear chat history</string>
    <string name="clear_histor_msg">Do you want to delete all messages in this chat?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_file_dialog">Delete file</string>
    <string name="delete_file_dialog_shared">This file has been shared with other chats.</string>
    <string name="delete_file_dialog_confirm">Are you sure you want to delete this file?</string>
    <string name="delete_file_dialog_copies">This will not delete copies of this file that are stored on other devices or servers.</string>
    <plurals name="delete_files_dialog">
        <item quantity="one">Delete file</item>
        <item quantity="other">Delete %d files</item>
    </plurals>
    <plurals name="delete_files_dialog_msg">
        <item quantity="one">Are you sure you want to delete this file?</item>
        <item quantity="other">Are you sure you want to delete these files?</item>
    </plurals>
    <string name="archive_this_chat">Delete chat afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send clear text message</string>
    <string name="send_message">Send message</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_encrypted_message">Send encrypted message</string>
    <string name="send_omemo_x509_message">Send v\\OMEMO encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="send_unencrypted">Send clear text</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long"><![CDATA[%1$s uses <b>OpenKeychain</b> to encrypt and decrypt messages and manage your public keys.<br><br>It is licensed under GPLv3+ and available on F-Droid and Google Play.<br><br><small>(Please restart %1$s afterwards.)</small>]]></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="openkeychain_not_installed">Please install OpenKeychain</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">Could not encrypt your message because your contact is not announcing their public key.\n\n<small>Please ask your contact to set up OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">Could not encrypt your message because your contacts are not announcing their public keys.\n\n<small>Please ask them to set up OpenPGP.</small></string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_notification_sound">Notification sound</string>
    <string name="pref_notification_sound_summary">Notification sound for new messages</string>
    <string name="pref_call_ringtone_summary">Ringtone for incoming calls</string>
    <string name="pref_notification_grace_period">Grace Period</string>
    <string name="pref_notification_grace_period_summary">The length of time notifications are silenced after detecting activity on one of your other devices.</string>
    <string name="enter_pin_or_password">Enter PIN or password</string>
    <string name="use_device_unlock">Use device unlock</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="pref_picture_compression">Image Compression</string>
    <string name="pref_use_colorful_bubbles">Colorful chat bubbles</string>
    <string name="pref_use_colorful_bubbles_summary">Distinct background colors for sent and received messages</string>
    <string name="pref_video_compression">Video Quality</string>
    <string name="start_chat">Start chat</string>
    <string name="pref_category_sending">Sending</string>
    <string name="pref_category_receiving">Receiving</string>
    <string name="pref_automatic_download">Automatic download</string>
    <string name="pref_large_font">Large font</string>
    <string name="pref_large_font_summary">Increase font size in message bubbles</string>
    <string name="pref_align_start">Left-aligned messages</string>
    <string name="pref_align_start_summary">Display all messages, including sent ones, on the left side for a uniform chat layout.</string>
    <string name="pref_account_avatar">Accounts</string>
    <string name="pref_account_avatar_summary">Display account avatars on outgoing messages for easy identification and management.</string>
    <string name="pref_category_avatars">Avatars</string>
    <string name="pref_show_11_chats">1:1 chats</string>
    <string name="pref_show_11_chats_summary">Display avatars in 1:1 chats. (Avatars in group chats will always been shown.)</string>
    <string name="unlock">Unlock</string>
    <string name="empty_conversations_list_hint">Once you start a new conversation, you’ll see it listed here</string>
    <string name="suggested_contacts">Suggested contacts</string>
    <string name="pref_auto_send_recording">Auto-send recordings</string>
    <string name="pref_auto_send_recording_summary">Send voice messages automatically when you finish recording.</string>
    <string name="pref_attachment_storage">Attachment storage</string>
    <string name="search_in_chats">Search in chats</string>
</resources>