<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="@bool/use_green_background"
        android:icon="@drawable/ic_colors_24dp"
        android:key="use_green_background"
        android:summary="@string/pref_use_colorful_bubbles_summary"
        android:title="@string/pref_use_colorful_bubbles" />
    <ListPreference
        android:defaultValue="@string/chat_wallpaper_default"
        android:entries="@array/chat_wallpaper_names"
        android:entryValues="@array/chat_wallpaper_values"
        android:icon="@drawable/ic_image_24dp"
        android:key="chat_wallpaper"
        android:title="@string/pref_chat_wallpaper"
        app:useSimpleSummaryProvider="true" />
    <SwitchPreferenceCompat
        android:defaultValue="@bool/large_font"
        android:icon="@drawable/ic_format_size_24dp"
        android:key="large_font"
        android:summary="@string/pref_large_font_summary"
        android:title="@string/pref_large_font" />
    <SwitchPreferenceCompat
        android:defaultValue="@bool/align_start"
        android:disableDependentsState="true"
        android:icon="@drawable/ic_format_align_left_24dp"
        android:key="align_start"
        android:summary="@string/pref_align_start_summary"
        android:title="@string/pref_align_start" />
    <PreferenceCategory android:title="@string/pref_category_avatars">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/show_avatars"
            android:icon="@drawable/ic_face_right_24dp"
            android:key="show_avatars"
            android:summary="@string/pref_show_11_chats_summary"
            android:title="@string/pref_show_11_chats" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/show_avatars_accounts"
            android:key="show_avatars_accounts"
            android:dependency="align_start"
            android:icon="@drawable/ic_face_left_24dp"
            android:summary="@string/pref_account_avatar_summary"
            android:title="@string/pref_account_avatar" />
    </PreferenceCategory>
</PreferenceScreen>
